<resources>
    <string name="app_name">SVA Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">back</string>
    <string name="set">Settings</string>
    <string name="generalSet">General setting</string>
    <string name="push">Receive push</string>
    <string name="address">Service address</string>
    <string name="setAddress">Service Address(Ip:Port)</string>
    <string name="nullIp">Service address is empty!</string>
    <string name="wrongIp">Service IP address format error!</string>
    <string name="port">Port setting</string>
    <string name="setPort">Input port</string>
    <string name="nullPort">Port number is empty!</string>
    <string name="wrongPort">Port number format error (1-65535)</string>
    <string name="wrongAddress">Malformed (ip: port)</string>
    <string name="language">Language</string>
    <string name="ping">Ping Server</string>
    <string name="pingSet">Ping Operation</string>
    <string name="pingResult">Ping Result:</string>
    <string name="pingServer">Is Ping Server, please wait...</string>
    <string name="pingSVA">Is Ping SVA, please wait...</string>
    <string name="pingnumber">Ping number：</string>
    <string name="pingsize">Ping packsize：</string>
    <string name="pingtime">Ping timeout：</string>
    <string name="pingSva">Ping Sva</string>
    <string name="pingmessage">Can not be empty!</string>
    <string name="up">Update</string>
    <string name="upInfo">The latest version</string>
    <string name="save">Save</string>
    <string name="saveInfo">Update configuration</string>
    <string name="loadMapdata">Loading map data...</string>
    <string name="loadMap">Downloading map...</string>
    <string name="exit">Exit SVA?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choice">Please choose</string>
    <string name="sure">ensure</string>
    <string name="wrong">Download map data error!</string>
    <string name="noNet">No access network, please check the settings</string>
    <string name="checkNet"> Check the network settings or reload the map！</string>
    <string name="fill">Map download failed!</string>
    <string name="changeFloor">Is the change in the floor of your floor, whether or not the map?</string>
    <string name="history">Historical records</string>
    <string name="showHistory">View history</string>
    <string name="delete">Delete</string>
    <string name="notAt">The point is not in the map!</string>
    <string name="test">Precision Adjustment</string>
    <string name="closeDebug">Close debug</string>
    <string name="kouling">Password authentication</string>
    <string name="koulingYanzheng">Password authentication...</string>
    <string name="nullKouling">User name or password can not be empty!</string>
    <string name="noResponse">Server is not responding!</string>
    <string name="userName">Username:</string>
    <string name="psw">Password:</string>
    <string name="configPosition">Confirmation position</string>
    <string name="lockPosition">Lock position</string>
    <string name="checkPoint">Please complete the coordinates!</string>
    <string name="xPoint">X coordinates:</string>
    <string name="yPoint">Y coordinates:</string>
    <string name="startTest">Start testing</string>
    <string name="endTest">on testing</string>
    <string name="results">Aver</string>
    <string name="error">Test error</string>
    <string name="num">Total collection points</string>
    <string name="mi">m</string>
    <string name="noPosition">Not positioned</string>
    <string name="noPositionInfo">The precision test is stopped without opening the position.</string>
    <string name="closePositionInfo">Please close the following location!</string>
    <string name="know">got it</string>
    <string name="pwdWrong">User name or Password error!</string>
    <string name="nameWrong">User name or Password error!</string>
    <string name="totalNum">The number of acquisition points within</string>
    <string name="gensuiInfo">Please close the accuracy test!</string>
    <string name="dingweiInfo">Please close the position following!</string>
    <string name="closeDebugMode">Please close Debug!</string>
    <string name="warm">The accuracy of the test is being conducted,Please check it later.</string>
    <string name="netWrong">Detected network has been disconnected,Please check the network.</string>
    <string name="outMap">You are not within. the scope of the map</string>
    <string name="switch2">Open/Close Animation</string>
    <string name="floorSwitch">Automatic switching Floor</string>
    <string name="following">Positioning to follow</string>
    <string name="wifipositioning">wifi positioning</string>
    <string name="change">Floor is changed</string>
    <string name="tips">Tips: system location to your floor is no longer present, whether to switch floor, click on the switch ...</string>
    <string name="pathadjust">Path adjust</string>
    <string name="addpath">Add path</string>
    <string name="pathconnect">Path Connect</string>
    <string name="startadjust">Start Adjust</string>
    <string name="addfile">Add File</string>
    <string name="closeadjust">Close Adjust</string>
    <string name="takePoint">Please point on the map</string>
    <string name="filtercaculate"> Filtering calculation </string>
    <string name="revoke">Revoke</string>
    <string name="dynamic">Into the dynamic mode</string>
    <string name="more">more</string>
    <string name="cutout">cut out</string>
    <string name="dynicStart">Start</string>
    <string name="dynicEnd">End</string>
    <string name="startPoint">Start point</string>
    <string name="endPoint">End point</string>
    <string name="method_up">Upload method</string>
    <string name="reload">Plase reload the message with map!</string>
    <string name="setting_mapscale">According to the map scale</string>
    <string name="set_h">Advanced Settings</string>
    <string name="set_jingdu">Accuracy of the test</string>
    <string name="set_prru">PRRU information</string>
    <string name="set_guandao">Arrow inertial navigation</string>
    <string name="set_static">The static</string>
    <string name="set_dynamic">The dynamic </string>
    <string name="set_select">Please select debug mode!</string>
    <string name="choseposition">Choose the starTOtend position plase!</string>
    <string name="chosestart">Choose the start position plase!</string>
    <string name="choseend">Choose the end position plase!</string>
    <string name="faild">lose the point,it is faild!</string>
    <string name="ygpc">Default error</string>
    <string name="savenum">save</string>
    <string name="takenum">take out</string>
    <string name="test_results">The test results</string>
    <string name="prruinfo_norespond">The server did not respond!</string>
    <string name="looking_video">Look  video</string>
    <string name="no_video">No video can be viewed</string>
    <string name="prompt">Prompt</string>
    <string name="help">Help document</string>
    <string name="prru_fail">pRRU subscription fails, retry after exit</string>
    <string name="wrongMap">Maps Download Failed!</string>
    <string-array name="array">
        <item>简体中文</item>
        <item>English</item>
    </string-array>
    <string-array name="array1">
        <item>IP</item>
        <item>MAC</item>
    </string-array>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_dynic_activity2">DynicActivity2</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_dynic_history">DynicHistory</string>
    <string name="title_activity_dynic">DynicActivity</string>
    <string name="title_activity_prru_info_acitivity">PrruInfoAcitivity</string>
    <string name="title_activity_general_setting">GeneralSettingActivity</string>
    <string name="title_activity_wheel">WheelActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="nomap">Map download fails, you can not enter the advanced features</string>
    <string name="prruNum">Number pRRU:</string>
    <string name="wrongPoint">Start and end points can not be the same point</string>
    <string name="makesure">Are upload server?</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="proportionEmpty">Map scale can not be empty.</string>
    <string name="thresholdEmpty">Static threshold can not be empty.</string>
    <string name="weightsEmpty">Weight can not be empty.</string>
    <string name="maxDeviateEmpty">The maximum deviation can not be empty.</string>
    <string name="moreMaxDeviateEmpty">Exceed the maximum deviation can not be empty.</string>
    <string name="directionEmpty">Map directions can not be empty.</string>
    <string name="ins_api">Travel angle</string>
    <string name="map_scale">Map scale(px/m)</string>
    <string name="Static_threshold">Static threshold(m/s)</string>
    <string name="weights">Weights</string>
    <string name="crossweights">crossweights</string>
    <string name="max_deviation">The maximum deviation(m)</string>
    <string name="Exceed_max_deviation">Exceed the maximum deviation (times)</string>
    <string name="Correction_Map_Directions">Correction map direction (°)</string>
    <string name="applyTitle">Disclaimer security protocol</string>
    <string name="applyCheck">Consent agreement</string>
    <string name="applyContent">Use SVADemo need to pay attention, "security exemption agreement", this APP need to acquire user location information</string>
    <string name="applyAgree">agree</string>
    <string name="applyNoagree">disagree</string>
    <string name="noway">Path not found</string>
    <string name="from">from here</string>
    <string name="to">to here</string>
    <string name="direction">Main direction</string>
    <string name="errorAngle">ErrorAngle</string>
    <string name="positioningError">positioningError</string>
    <string name="filterNumber">filterNumber</string>
    <string name="gaussVariance">gaussVariance</string>
    <string name="readius">readius</string>
    <string name="max_vail_list">The maximum error</string>
    <string name="static_accuracy">Static accuracy</string>
    <string name="out_center">Out_center</string>
    <string name="offset">Offset</string>
    <string name="stability">Stability</string>
    <string name="dy_error">Dynamic error</string>
    <string name="saves">Saved to server</string>
    <string name="out">Take out</string>
    <string name="message">Message test</string>
    <string name="delay">Delay Test</string>
    <string name="touchToSet">Click on the screen to set the end point</string>
    <string name="DataDelay">Data Delay:</string>
    <string name="Locationdelay">Location delay:</string>
    <string name="LocationdelayTest">Location delay test</string>
    <string name="CancelTest">Cancel Test</string>
    <string name="range">Range(m):</string>
    <string name="notAtrange">No anchor points into the test area, please wait</string>
    <string name="testDuration">Test duration(s):</string>
    <string name="testMessage">The accuracy of the test message</string>
    <string name="correctTime">Push the correct number of times:</string>
    <string name="nopushTime">No push times:</string>
    <string name="wrongTime">Push the number of errors:</string>
    <string name="booleanRange">Whether the push range:</string>
    <string name="messageCenter">Message center:</string>
    <string name="distance">Distance:</string>
    <string name="radius">Radius:</string>
    <string name="realPoint">Set the coordinate</string>
    <string name="samples">Set number of samples</string>
    <string name="title_activity_wifi_str">WifiStrActivity</string>
</resources>