<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/xPoint"
                android:textColor="#000" />

            <EditText
                android:id="@+id/xxPoint"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:inputType="number|numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/yPoint"
                android:textColor="#000" />

            <EditText
                android:id="@+id/yyPoint"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:inputType="number|numberDecimal" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/testDuration"
                android:textColor="#000" />

            <EditText
                android:id="@+id/duration"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="5"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>