<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ThisAcitivity" >

    <RelativeLayout
        android:id="@+id/rl_location_delay"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#3385ff"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="55dp"
            android:background="@drawable/top_line" />

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:onClick="setting_back" >

            <Button
                android:id="@+id/btn_delay_back"
                android:layout_width="13dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:background="@drawable/title_back_selector"
                android:onClick="setting_back" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/LocationdelayTest"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_delay_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_location_delay" >
    </RelativeLayout>

    <Button
        android:id="@+id/delayClick"
        style="@style/test_10_this_activity"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="80dp"
        android:layout_marginRight="10dip"
        android:background="@drawable/this_button"
        android:gravity="center"
        android:onClick="LocationDelay"
        android:padding="3dp"
        android:text="@string/endPoint" />

    <Button
        android:id="@+id/cancleTest"
        style="@style/test_10_this_activity"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dip"
        android:background="@drawable/this_button"
        android:gravity="center"
        android:onClick="static_Click"
        android:padding="3dp"
        android:text="@string/CancelTest"
        android:visibility="gone"/>

</RelativeLayout>