<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    android:orientation="vertical"
    tools:context=".HighSetAcitivity" >

    <RelativeLayout
        android:id="@+id/rl_high_set"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/top"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="55dp"
            android:background="@drawable/top_line" />

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:onClick="backClick" >

            <Button
                android:id="@+id/register_btn_back"
                android:layout_width="13dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:background="@drawable/title_back_selector"
                android:onClick="backClick" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set_h"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/redcircle" >

        <GridView
            android:id="@+id/grid"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:horizontalSpacing="1dp"
            android:numColumns="3"
            android:verticalSpacing="1dp" >
        </GridView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ping"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/ping"
        android:layout_margin="10dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="40dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ping"
            android:textColor="#000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/btn_ping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="@string/pingSet"
            android:textColor="#000"
            android:textSize="17sp" >
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/method_up"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/ping"
        android:layout_margin="10dp"
        android:clickable="true"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="22dp"
            android:text="@string/method_up"
            android:textColor="#000"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:alpha="0"
            android:background="@drawable/ping"
            android:entries="@array/array1" />

        <TextView
            android:id="@+id/tv_method_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:textColor="#000"
            android:textSize="17sp" >
        </TextView>
    </RelativeLayout>

</LinearLayout>